feat: Add user,order,product, and featuredproducts models
Co-Authored-By: Marawan Mohamed <40841193+marwan-mohamed12@users.noreply.github.com>

--- a/server/package.json
+++ b/server/package.json
@@ -9,5 +9,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
+  }
 }
