--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.0.1",
+    "validator": "^13.11.0",
+    "mailtrap":"^3.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1"
