--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +15,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.3.0",
     "mongoose": "^8.3.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
-    "validator": "^13.11.0",
-    "mailtrap":"^3.3.0"
-
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "chai": "^5.1.0",
+    "mocha": "^10.4.0"
   }
 }
