--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "type": "module",
   "scripts": {
+    "dev": "nodemon app.mjs"
     "test": "mocha tests"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -18,11 +17,11 @@
     "mailtrap": "^3.3.0",
     "mongoose": "^8.3.2",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "nodemon": "^3.1.0"
     "chai": "^5.1.0",
     "mocha": "^10.4.0"
   }
