Implement User Signup/Login Services
- feat(Frontend:Auth): Implemented user signup and login services, integrating them with the server.
- refactor(Backend:Auth): Updated data sent during signup/login.
- feat(Frontend:Auth): Added interceptor and Auth service to check user role and status.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,6 @@
-PORT = 3000
 NODE_ENV=development
-API_SECRET = "add any string here"
-SESSION_SECRET = "add any string here"
-DATABASE_URL="mongodb://localhost:27017/ecommerce"
-
-
+PORT=3000
 USERNAME=mahmudhmh
 JWT_SECRET=my-super-dehk-secret-offf-sec-gamed
 JWT_EXPIRES_IN=30d
+DATABASE_URL="your DB_URL"
