--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.3.0",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "validator": "^13.11.0"
   },
