--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
+    "chart.js": "^4.4.2",
+    "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.10.8",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
