--- a/client/angular.json
+++ b/client/angular.json
@@ -25,10 +25,13 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
-              "@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/@splidejs/splide/dist/css/splide.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@splidejs/splide/dist/js/splide.min.js"
+            ]
           },
           "configurations": {
             "production": {
