--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@splidejs/splide": "^4.1.4",
     "chart.js": "^4.4.2",
     "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
